2009-10-06  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: add new function for add extend widget
	"print_extended_select_for_time", that write a two html control a
	select and textbox and scripting for interconet twice components and
	when change the textbox and save add the value in select and when
	change the selected put in textbox.

2009-10-05  Sancho Lerena   <slerena@artica.es>

	* include/fgraph.php: Solved ticks in X label for boolean graphs.

	* operation/agentes/datos_agente.php: Show absolute timestamp and
	data with format_numeric() filter.

	* operation/agentes/estado_monitores.php: Solved typo.


2009-10-01  Miguel de Dios  <miguel.dedios@artica.es>

	* pandora_console/godmode/reporting/reporting_builder.php: change the
	agent select html for ajax autocomplete ajax. Fix in part the bug
	#2870769, exactly 1º paragraph.

2009-10-01  Miguel de Dios  <miguel.dedios@artica.es>

	* pandora_console/godmode/alerts/alert_list.php: fix small bug that throw
	notice message for a array uninitialize.

2009-09-30  Sancho Lerena  <slerena@artica.es>

	* pandora_console.spec: Updated spec for a more complete  uninstall. 

2009-09-29  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora_mod, include/javascript/pandora.js: cleanup
	the sourcecode and add more funcionality to funciton "html_entity_decode".

2009-09-29  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/alerts/configure_alert_template.php:

2009-09-29  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/alerts/configure_alert_template.php: fix small typing bug.

2009-09-28  Sancho Lerena <slerena@artica.es>

	* include/help/en/help_alert_macros.php: Updated macros help

	* pandoradb.sql: Added id_group to talert_action, talert_templates and   
	tplanned_downtime to be able to segregate all pandora functions for
	different groups/users. Need to implement in interface code.

 	* extras/pandoradb_migrate_v2.x_to_v3.0.sql: Updated migration script 